update mobile style page

--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -38,7 +38,23 @@
                 </a>
                 <a href="https://dl52cpaeesvk0.cloudfront.net/ui/index.html" class="nav-cta" target="_blank">Testar
                     Modelo</a>
+                <button class="nav-hamburger" id="navHamburger" aria-label="Abrir menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
+        </div>
+        <!-- Mobile Menu -->
+        <div class="nav-mobile" id="navMobile">
+            <ul class="nav-mobile-menu">
+                <li><a href="#metodologia">Metodologia</a></li>
+                <li><a href="#resultados">Resultados</a></li>
+                <li><a href="#interpretabilidade">Interpretabilidade</a></li>
+                <li><a href="#deploy">Deploy</a></li>
+                <li><a href="#equipe">Equipe</a></li>
+                <li><a href="#referencias">Referências</a></li>
+            </ul>
         </div>
     </nav>
 
