--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -177,7 +177,9 @@
                     <p>Um dataset (conjunto de dados) é a base de informações utilizada para "ensinar" o modelo de Machine Learning.
                     Neste projeto, utilizamos dados reais de 4.240 pacientes, contendo informações clínicas e demográficas.
                     A <strong>prevalência de 31%</strong> indica que aproximadamente 1 em cada 3 pacientes no estudo possui hipertensão,
-                    o que representa um desbalanceamento que foi tratado com técnicas específicas (SMOTE) durante o treinamento.</p>
+                    o que representa um desbalanceamento que foi tratado com técnicas específicas (SMOTE) durante o treinamento.
+                    <strong>Dataset:</strong> O conjunto de dados utilizado neste projeto está disponível publicamente no Kaggle.
+                    Acesse o link: <a href="https://www.kaggle.com/datasets/khan1803115/hypertension-risk-model-main/data/code" target="_blank" rel="noopener noreferrer">Kaggle - hypertension-risk-model-main</a></p>
                 </div>
             </div>
 
