--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -179,7 +179,7 @@
                     A <strong>prevalência de 31%</strong> indica que aproximadamente 1 em cada 3 pacientes no estudo possui hipertensão,
                     o que representa um desbalanceamento que foi tratado com técnicas específicas (SMOTE) durante o treinamento.
                     <strong>Dataset:</strong> O conjunto de dados utilizado neste projeto está disponível publicamente no Kaggle.
-                    Acesse o link: <a href="https://www.kaggle.com/datasets/khan1803115/hypertension-risk-model-main/data/code" target="_blank" rel="noopener noreferrer">Kaggle - hypertension-risk-model-main</a></p>
+                    <br><span class="info-note"><strong>Acesse o link:</strong> <a href="https://www.kaggle.com/datasets/khan1803115/hypertension-risk-model-main/data/code" target="_blank" rel="noopener noreferrer">Kaggle - hypertension-risk-model-main</a></span></p>
                 </div>
             </div>
 
@@ -294,8 +294,9 @@
                     <p>Testamos 10 algoritmos diferentes de Machine Learning para encontrar o mais adequado para prever hipertensão.
                     O <strong>Random Forest</strong> foi selecionado como melhor modelo por apresentar o melhor equilíbrio entre
                     detectar corretamente pacientes com hipertensão (alta sensibilidade) e não gerar alarmes falsos desnecessários
-                    (boa especificidade). Em contexto médico, prioriza-se não deixar passar casos positivos (falsos negativos),
-                    por isso usamos o <strong>F2-Score</strong> como métrica principal de decisão.</p>
+                    (boa especificidade).
+                    <br><span class=\"info-note\">Em contexto médico, prioriza-se não deixar passar casos positivos (falsos negativos),
+                    por isso usamos o <strong>F2-Score</strong> como métrica principal de decisão.</span></p>
                 </div>
             </div>
 
@@ -427,7 +428,7 @@
                     <p>Em aplicações médicas, não basta o modelo fazer predições precisas — é fundamental entender <em>por que</em> ele chegou
                     àquela conclusão. A interpretabilidade permite que médicos validem se o modelo está usando critérios clinicamente relevantes,
                     aumentando a confiança no sistema e facilitando a tomada de decisão compartilhada com o paciente.
-                    Modelos "caixa-preta" que não explicam suas decisões são menos aceitos na prática clínica.</p>
+                    <br><span class=\"info-note\">Modelos "caixa-preta" que não explicam suas decisões são menos aceitos na prática clínica.</span></p>
                 </div>
             </div>
 
@@ -600,8 +601,8 @@
                     <strong>Por que Deploy em Nuvem?</strong>
                     <p>Um modelo de Machine Learning só gera valor quando está disponível para uso real. O deploy na AWS permite que
                     o sistema seja acessado de qualquer lugar, 24 horas por dia, com alta disponibilidade e baixa latência.
-                    A arquitetura serverless (sem servidores dedicados) reduz custos e escala automaticamente conforme a demanda,
-                    tornando o sistema viável mesmo para instituições com recursos limitados.</p>
+                    <br><span class=\"info-note\">A arquitetura serverless (sem servidores dedicados) reduz custos e escala automaticamente conforme a demanda,
+                    tornando o sistema viável mesmo para instituições com recursos limitados.</span></p>
                 </div>
             </div>
 
@@ -845,3 +846,4 @@
 </body>
 
 </html>
+
