--- a/07_web/index.html
+++ b/07_web/index.html
@@ -239,13 +239,15 @@
           <span class="footer-tagline">TCC CEUNSP 2026</span>
         </div>
         <div class="footer-links">
-          <a href="https://anderson-ferreira-83.github.io/Hyperten_ML/" target="_blank">Metodologia e Resultados</a>
-          <a href="https://github.com/anderson-ferreira-83/Hyperten_ML" target="_blank">Codigo Fonte (GitHub)</a>
+          <a href="https://anderson-ferreira-83.github.io/Hyperten_ML/" target="_blank" rel="noopener noreferrer">Metodologia e Resultados</a>
+          <a href="https://github.com/anderson-ferreira-83/Hyperten_ML" target="_blank" rel="noopener noreferrer">Codigo Fonte (GitHub)</a>
         </div>
         <div class="footer-dataset">
           <span>Dataset: O conjunto de dados utilizado neste projeto esta disponivel publicamente no Kaggle.</span>
-          <a href="https://www.kaggle.com/datasets/khan1803115/hypertension-risk-model-main/data/code"
-            target="_blank">Acesse o Link</a>
+          <span class="footer-note"><strong>Acesse o Link:</strong>
+            <a href="https://www.kaggle.com/datasets/khan1803115/hypertension-risk-model-main/data/code"
+              target="_blank" rel="noopener noreferrer">Kaggle - hypertension-risk-model-main</a>
+          </span>
         </div>
         <div class="footer-contact">
           <span>ahferreira@ceunsp.edu.br</span>
