--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -29,14 +29,21 @@
                 <li><a href="#referencias">Referências</a></li>
             </ul>
             <div class="nav-actions">
-                <a href="https://github.com/anderson-ferreira-83/Hyperten_ML" class="nav-github" target="_blank"
+                <a href="https://github.com/anderson-ferreira-83/Hyperten_ML" class="nav-social nav-github" target="_blank" rel="noopener noreferrer"
                     title="Ver código no GitHub">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                     </svg>
                 </a>
-                <a href="https://dl52cpaeesvk0.cloudfront.net/ui/index.html" class="nav-cta" target="_blank">Testar
+                <a href="https://www.linkedin.com/in/anderson-ferreira-1a473138/" class="nav-social nav-linkedin" target="_blank" rel="noopener noreferrer"
+                    title="Conectar no LinkedIn">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.27c-.97 0-1.75-.79-1.75-1.76s.78-1.76 1.75-1.76 1.75.79 1.75 1.76-.78 1.76-1.75 1.76zm13.5 11.27h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.37h.04c.4-.76 1.38-1.56 2.84-1.56 3.04 0 3.6 2 3.6 4.59v6.3z" />
+                    </svg>
+                </a>
+                <a href="https://dl52cpaeesvk0.cloudfront.net/ui/index.html" class="nav-cta" target="_blank" rel="noopener noreferrer">Testar
                     Modelo</a>
             </div>
         </div>
@@ -76,7 +83,7 @@
             </div>
             <div class="hero-buttons">
                 <a href="https://dl52cpaeesvk0.cloudfront.net/ui/index.html" class="btn btn-primary"
-                    target="_blank">Testar Modelo Online</a>
+                    target="_blank" rel="noopener noreferrer">Testar Modelo Online</a>
                 <a href="#metodologia" class="btn btn-secondary">Ver Metodologia</a>
             </div>
         </div>
@@ -829,7 +836,7 @@
                         used for predicting total testosterone deficiency in type 2 diabetes patients,"
                         <em>Diagnostics</em>, vol. 14, no. 23, Art. no. 2634, Nov. 2024.<br><span class="ref-link">Link
                             de Acesso: <a href="https://doi.org/10.3390/diagnostics14232634"
-                                target="_blank">https://doi.org/10.3390/diagnostics14232634</a></span>
+                                target="_blank" rel="noopener noreferrer">https://doi.org/10.3390/diagnostics14232634</a></span>
                     </p>
                 </div>
                 <div class="reference-item">
@@ -838,7 +845,7 @@
                         imbalanced data: Progress and challenges, marking the 15-year anniversary," <em>J. Artif.
                             Intell. Res.</em>, vol. 61, pp. 863–905, 2018.<br><span class="ref-link">Link de Acesso: <a
                                 href="https://doi.org/10.1613/jair.1.11192"
-                                target="_blank">https://doi.org/10.1613/jair.1.11192</a></span></p>
+                                target="_blank" rel="noopener noreferrer">https://doi.org/10.1613/jair.1.11192</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[3]</span>
@@ -847,7 +854,7 @@
                         unbalanced data over a 5-year cohort study using machine learning algorithm," <em>BMC Med. Res.
                             Methodol.</em>, vol. 24, Art. no. 220, Sep. 2024.<br><span class="ref-link">Link de Acesso:
                             <a href="https://doi.org/10.1186/s12874-024-02341-z"
-                                target="_blank">https://doi.org/10.1186/s12874-024-02341-z</a></span></p>
+                                target="_blank" rel="noopener noreferrer">https://doi.org/10.1186/s12874-024-02341-z</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[4]</span>
@@ -855,7 +862,7 @@
                         enhanced imbalanced data classification by expanding sample generation space," <em>Sci.
                             Rep.</em>, vol. 15, Art. no. 23521, Jul. 2025.<br><span class="ref-link">Link de Acesso: <a
                                 href="https://doi.org/10.1038/s41598-025-09506-w"
-                                target="_blank">https://doi.org/10.1038/s41598-025-09506-w</a></span></p>
+                                target="_blank" rel="noopener noreferrer">https://doi.org/10.1038/s41598-025-09506-w</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[5]</span>
@@ -863,14 +870,14 @@
                         medical data at the data level with assisted-reproduction data as an example," <em>BioData
                             Mining</em>, vol. 17, Art. no. 29, Sep. 2024.<br><span class="ref-link">Link de Acesso: <a
                                 href="https://doi.org/10.1186/s13040-024-00384-y"
-                                target="_blank">https://doi.org/10.1186/s13040-024-00384-y</a></span></p>
+                                target="_blank" rel="noopener noreferrer">https://doi.org/10.1186/s13040-024-00384-y</a></span></p>
                 </div>
                 <div class="reference-item" id="ref-6">
                     <span class="ref-number">[6]</span>
                     <p class="ref-text">World Health Organization, "Global report on hypertension: The race against a
                         silent killer," Geneva: WHO, Sep. 2023.<br><span class="ref-link">Link de Acesso: <a
                                 href="https://www.who.int/teams/noncommunicable-diseases/hypertension-report"
-                                target="_blank">https://www.who.int/teams/noncommunicable-diseases/hypertension-report</a></span>
+                                target="_blank" rel="noopener noreferrer">https://www.who.int/teams/noncommunicable-diseases/hypertension-report</a></span>
                     </p>
                 </div>
                 <div class="reference-item" id="ref-7">
@@ -880,14 +887,14 @@
                         population-representative studies with 104 million participants," <em>The Lancet</em>, vol. 398,
                         no. 10304, pp. 957–980, Sep. 2021.<br><span class="ref-link">Link de Acesso: <a
                                 href="https://doi.org/10.1016/S0140-6736(21)01330-1"
-                                target="_blank">https://doi.org/10.1016/S0140-6736(21)01330-1</a></span></p>
+                                target="_blank" rel="noopener noreferrer">https://doi.org/10.1016/S0140-6736(21)01330-1</a></span></p>
                 </div>
                 <div class="reference-item" id="ref-8">
                     <span class="ref-number">[8]</span>
                     <p class="ref-text">World Health Organization, "Hypertension: Key facts," WHO Fact Sheets, Mar.
                         2023. [Online].<br><span class="ref-link">Link de Acesso: <a
                                 href="https://www.who.int/news-room/fact-sheets/detail/hypertension"
-                                target="_blank">https://www.who.int/news-room/fact-sheets/detail/hypertension</a></span>
+                                target="_blank" rel="noopener noreferrer">https://www.who.int/news-room/fact-sheets/detail/hypertension</a></span>
                     </p>
                 </div>
             </div>
@@ -901,12 +908,12 @@
                 <div class="footer-section">
                     <h4>Links Úteis</h4>
                     <ul>
-                        <li><a href="https://github.com/anderson-ferreira-83/Hyperten_ML" target="_blank">Repositório
+                        <li><a href="https://github.com/anderson-ferreira-83/Hyperten_ML" target="_blank" rel="noopener noreferrer">Repositório
                                 GitHub</a></li>
-                        <li><a href="https://dl52cpaeesvk0.cloudfront.net/ui/index.html" target="_blank">Demo AWS</a>
+                        <li><a href="https://dl52cpaeesvk0.cloudfront.net/ui/index.html" target="_blank" rel="noopener noreferrer">Demo AWS</a>
                         </li>
                         <li><a href="https://www.kaggle.com/datasets/khan1803115/hypertension-risk-model-main/data"
-                                target="_blank">Dataset Original</a></li>
+                                target="_blank" rel="noopener noreferrer">Dataset Original</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
