--- a/07_web/index.html
+++ b/07_web/index.html
@@ -25,6 +25,13 @@
           </svg>
           GitHub
         </a>
+        <a href="https://www.linkedin.com/in/anderson-ferreira-1a473138/" class="nav-link linkedin-link" target="_blank" rel="noopener noreferrer" title="Conectar no LinkedIn">
+          <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16">
+            <path
+              d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.27c-.97 0-1.75-.79-1.75-1.76s.78-1.76 1.75-1.76 1.75.79 1.75 1.76-.78 1.76-1.75 1.76zm13.5 11.27h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.37h.04c.4-.76 1.38-1.56 2.84-1.56 3.04 0 3.6 2 3.6 4.59v6.3z" />
+          </svg>
+          LinkedIn
+        </a>
       </div>
     </header>
 
