--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -29,6 +29,33 @@
                 <li><a href="#referencias">Referências</a></li>
             </ul>
             <div class="nav-actions">
+                <div class="nav-langs">
+                    <a href="index.html" class="lang-link is-active" title="Português" aria-label="Português">
+                        <svg viewBox="0 0 24 16" role="img" aria-hidden="true">
+                            <rect width="24" height="16" fill="#1a8f3a" />
+                            <polygon points="12,2 22,8 12,14 2,8" fill="#f7d116" />
+                            <circle cx="12" cy="8" r="3.2" fill="#1f3c88" />
+                        </svg>
+                    </a>
+                    <a href="en/index.html" class="lang-link" title="English" aria-label="English">
+                        <svg viewBox="0 0 24 16" role="img" aria-hidden="true">
+                            <rect width="24" height="16" fill="#b22234" />
+                            <rect y="2" width="24" height="2" fill="#ffffff" />
+                            <rect y="6" width="24" height="2" fill="#ffffff" />
+                            <rect y="10" width="24" height="2" fill="#ffffff" />
+                            <rect y="14" width="24" height="2" fill="#ffffff" />
+                            <rect width="10" height="7" fill="#3c3b6e" />
+                            <circle cx="2" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="4" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="6" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="8" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="3" cy="4" r="0.6" fill="#ffffff" />
+                            <circle cx="5" cy="4" r="0.6" fill="#ffffff" />
+                            <circle cx="7" cy="4" r="0.6" fill="#ffffff" />
+                            <circle cx="9" cy="4" r="0.6" fill="#ffffff" />
+                        </svg>
+                    </a>
+                </div>
                 <a href="https://github.com/anderson-ferreira-83/Hyperten_ML" class="nav-social nav-github" target="_blank" rel="noopener noreferrer"
                     title="Ver código no GitHub">
                     <svg viewBox="0 0 24 24" fill="currentColor">
