Fix English page assets and language switch

--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
     <title>Prediction</title>
     <meta name="description"
         content="Machine Learning system to predict hypertension risk. CEUNSP capstone project.">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,6 +29,33 @@
                 <li><a href="#referencias">Referências</a></li>
             </ul>
             <div class="nav-actions">
+                <div class="nav-langs">
+                    <a href="../index.html" class="lang-link" title="Português" aria-label="Português">
+                        <svg viewBox="0 0 24 16" role="img" aria-hidden="true">
+                            <rect width="24" height="16" fill="#1a8f3a" />
+                            <polygon points="12,2 22,8 12,14 2,8" fill="#f7d116" />
+                            <circle cx="12" cy="8" r="3.2" fill="#1f3c88" />
+                        </svg>
+                    </a>
+                    <a href="index.html" class="lang-link is-active" title="English" aria-label="English">
+                        <svg viewBox="0 0 24 16" role="img" aria-hidden="true">
+                            <rect width="24" height="16" fill="#b22234" />
+                            <rect y="2" width="24" height="2" fill="#ffffff" />
+                            <rect y="6" width="24" height="2" fill="#ffffff" />
+                            <rect y="10" width="24" height="2" fill="#ffffff" />
+                            <rect y="14" width="24" height="2" fill="#ffffff" />
+                            <rect width="10" height="7" fill="#3c3b6e" />
+                            <circle cx="2" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="4" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="6" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="8" cy="2" r="0.6" fill="#ffffff" />
+                            <circle cx="3" cy="4" r="0.6" fill="#ffffff" />
+                            <circle cx="5" cy="4" r="0.6" fill="#ffffff" />
+                            <circle cx="7" cy="4" r="0.6" fill="#ffffff" />
+                            <circle cx="9" cy="4" r="0.6" fill="#ffffff" />
+                        </svg>
+                    </a>
+                </div>
                 <a href="https://github.com/anderson-ferreira-83/Hyperten_ML" class="nav-social nav-github" target="_blank" rel="noopener noreferrer"
                     title="Ver código no GitHub">
                     <svg viewBox="0 0 24 24" fill="currentColor">
@@ -905,8 +932,8 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/charts.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/charts.js"></script>
 </body>
 
 </html>
